//
// ----------------------------------------------------------------
//  Copyright (c) 2023 by cisco Systems, Inc.
//  All rights reserved.
// -----------------------------------------------------------------
//

syntax = "proto3";

package YCOV;

// The current semantic version of the gNOI YangCoverage service.
option go_package = ".;ycov";

service YangCoverage {
  // ClearYcLogs clears any existing Yang coverage test logs 
  rpc ClearYcLogs(ClearYcLogsRequest)
    returns (ClearYcLogsResponse) {}

  // GatherYcLogs gets the current set of Yang coverage test logs
  rpc GatherYcLogs(GatherYcLogsRequest) 
    returns (GatherYcLogsResponse) {}
}

message ClearYcLogsRequest {
}

message ClearYcLogsResponse {
}

// Supported test phases for Yang coverage logging
enum TestPhase {
  UT             = 0;
  IT             = 1;
  DT             = 2;
  CVT            = 3;
  BIT            = 4;
  MTB            = 5;
  SIT            = 6;
  ACCEPTANCE     = 7;
}

// Supported types of testing for Yang coverage logging
enum TestType {
  MANUAL      = 0; 
  PRECOMMIT   = 1;
  NIGHTLY     = 2;
  OCCASIONAL  = 3;
}

message GatherYcLogsRequest {
  string testName = 1;
  TestPhase testPhase = 2;
  TestType testType = 3;
}

message GatherYcLogsResponse {
  string logs = 1;
}
